[package]
name = "todoer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.5"
chrono = "0.4.19"
tui = "0.18.0"
crossterm = "0.23.2"
unicode-width = "0.1.5"

[features]
default = ["wide"]
wide = []